# solana-geyser-plugin

./: README.md
.github/workflows/: auto-release.yml  rust-clippy.yml
plugin/: .env.redis  Cargo.toml  config.json  geyser.json
plugin/src/: lib.rs  utils.rs
plugin/src/redis/: client.rs
