[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = "2.2.1"
solana-program = "2.2.1"
redis = "0.25" # Use the latest stable version
solana-sdk = "2.3.1"
dotenv = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.142"
